--- a/index.html
+++ b/index.html
@@ -34,14 +34,9 @@
 										<a href="#" data-navigateto="assignment2" class="nav-link">Opdracht 2</a>
 									</li>
 									<li class="nav-item">
-										<a href="#" data-navigateto="assignment3" class="nav-link">Opdracht 3</a>
+										<a href="#" data-navigateto="assignment3" class="nav-link">Opdracht 3 </a>
 									</li>
-									<li class="nav-item">
-										<a href="#" data-navigateto="assignment4" class="nav-link">Opdracht 4</a>
-									</li>
-									<li class="nav-item">
-										<a href="#" data-navigateto="assignment5" class="nav-link">Opdracht 5</a>
-									</li>
+							
 								</ul>
 								<div class="mobile-menu">
 									<span></span>
@@ -111,11 +106,8 @@
 								<div class="work-wrapper">
 									<div class="work-description">
 										<div class="work-detail">
-											<h3>Design website</h3>
-											<p>Aan de hand van wireframes van een mobile applicatie werk je een
-												wireframe uit voor zijn desktop variant. Maak vervolgens op basis van deze
-												wireframes een visueel ontwerp in Adobe XD. Tot slot codeer je de
-												website in HTML/CSS.</p>
+											<h3>Unweb your site</h3>
+											<p>Als eindopdracht zullen jullie een realistische website maken voor een fictieve klant. Deze opdracht vervangen de originele opdrachten 3, 4 en 5. Volg zeker de instructie om jullie portfolio aan te passen. Dit zal dus ook de laatste opdracht zijn.</p>
 										</div>
 										<div class="work-buttons-container"></div>
 									</div>
@@ -125,40 +117,7 @@
 								</div>
 							</div>
 
-							<!-- Assignment 4 -->
-							<div class="work-item assignment4">
-								<div class="work-wrapper">
-									<div class="work-image">
-										<h3>Opdracht 4</h3>
-									</div>
-									<div class="work-description">
-										<div class="work-detail">
-											<h3>Redesign website</h3>
-											<p>Met behulp van het boek Refactoring UI maak je een analyse van gemaakte
-												fouten in de opgegeven website. Vervolgens maak je zelf een design en
-												analyseer je de aanpassingen van je eigen ontwerp.</p>
-										</div>
-										<div class="work-buttons-container"></div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Assignment 5 -->
-							<div class="work-item assignment5">
-								<div class="work-wrapper">
-									<div class="work-description">
-										<div class="work-detail">
-											<h3>CSS Grid</h3>
-											<p>Maak voor deze opdracht gebruik van CSS Grid om de layout van je
-												webpagina op te bouwen.</p>
-										</div>
-										<div class="work-buttons-container"></div>
-									</div>
-									<div class="work-image">
-										<h3>Opdracht 5</h3>
-									</div>
-								</div>
-							</div>
+							
 						</div>
 					</div>
 				</div>
