--- a/assignments/assignment3/website/SCREENPAGE/SCREEN.html
+++ b/assignments/assignment3/website/SCREENPAGE/SCREEN.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ScreenPage</title>
+    <title>Preperation</title>
     <link rel="icon" href="../assets/IconWEBSITE.png">
 
     <!--CSS-->
@@ -66,7 +66,7 @@
         <section class="site-title4">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
                 <h3> Tutorial </h3>
-                <h1>Title of the video</h1>
+                <h1>Preperation</h1>
             </div>
         </section>
 
@@ -84,7 +84,7 @@
     <div class="containerVIDEO" id="video1">
         <div class="c-video">
           <!-- You'll need to supply your own video URL. I was testing with the public domain movie, Big Buck Bunny -->
-            <video src="../assets/VIDEO/VID1.mp4" class="video"></video>
+            <video src="../assets/VIDEO/VID1.mp4" class="video" ></video>
             <div class="controls">
                 <div class="orange-bar">
                     <div class="orange-juice">
@@ -130,6 +130,9 @@
             </div>
         </div>
     </section>
+
+
+  
 
 
     <!--beneden footer -->
