Portfolio Egon Persyn
Alle opdrachten

--- a/assignments/assignment3/website/02_FAQ/FAQ.html
+++ b/assignments/assignment3/website/02_FAQ/FAQ.html
@@ -49,7 +49,7 @@
                         <a href="../01_Tutorial/Tutorial.html">Tutorials</a>
                     </li>
                     <li class="nav-link">
-                        <a href="../02_FAQ/FAQ.html">FAQ</a>
+                        <a href="../02_FAQ/FAQ.html">Info</a>
                     </li>
                 </ul>
             </div>
@@ -65,8 +65,8 @@
 
         <section class="site-title3">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
-                <h3> FAQ </h3>
-                <h1>Send your question</h1>
+                <h3> Information </h3>
+                <h1>Look or send your questions</h1>
             </div>
         </section>
 
