--- a/assignments/assignment3/website/SCREENPAGE/SCREEN.html
+++ b/assignments/assignment3/website/SCREENPAGE/SCREEN.html
@@ -49,7 +49,7 @@
                         <a href="../01_Tutorial/Tutorial.html">Tutorials</a>
                     </li>
                     <li class="nav-link">
-                        <a href="../02_FAQ/FAQ.html">FAQ</a>
+                        <a href="../02_FAQ/FAQ.html">Info</a>
                     </li>
                 </ul>
             </div>
