--- a/assignments/assignment3/website/Index.html
+++ b/assignments/assignment3/website/Index.html
@@ -51,7 +51,7 @@
                         <a href="./01_Tutorial/Tutorial.html">Tutorials</a>
                     </li>
                     <li class="nav-link">
-                        <a href="./02_FAQ/FAQ.html">FAQ</a>
+                        <a href="./02_FAQ/FAQ.html">Info</a>
                     </li>
                 </ul>
             </div>
